# PhD_Active_Vision_System_Simulator

./: CMakeLists.txt  CMakeLists.txt~  README.md  iCub_Images_evaluation_datasets_scale_and_orientation  main.cpp
CONTROLLERS/: controller.h~  ctrnn3Layers  ctrnn3Layers.cpp  ctrnn3Layers.h  ctrnn3Layers.h~  ctrnn3Layers~  ctrnnFullyRecurrent  ctrnnFullyRecurrent.cpp  ctrnnFullyRecurrent.h  elman  elman.cpp  elman.h  perceptron  perceptron.cpp  perceptron.h  perceptron~  simple3Layers  simple3Layers.cpp~  simple3Layers.h  simple3Layers~
EVOL_ALGORITHM/: chromosome.h  ga.h  initialisation_param.txt  initialisation_param.txt~  roulette_wheel.cpp  roulette_wheel.h  swarm_ga.cpp  swarm_ga.h  tournament.cpp  tournament.h
EXP/: experiment.cpp  experiment.h  experiment.h~
EXP/RENDERING/: engine.cpp  engine.cpp~  engine.h  engine.h~  interface.cpp  interface.cpp~  interface.h  interface.h~  sky.cpp  sky.cpp~  sky.h  sky.h~  viewer.cpp  viewer.cpp~  viewer.h  viewer.h~
MISC/: Artificial_Eye.h  general.cpp  general.cpp~  general.h  general.h~  init_run.txt  init_run.txt~  light.sam  parameters.cpp  parameters.h  parameters.h~  round.sam
ROB_SENSORS_OBJS/: Artificial_Eye.cpp  Artificial_Eye.h  al_sensors.cpp  al_sensors.h  ir_sensors.cpp  ir_sensors.h  linear_camera.cpp  linear_camera.h  simple_agents.cpp  simple_agents.h  simple_objects.cpp  simple_objects.h  world_entity.cpp  world_entity.h
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  pippo
builds/CONTROLLERS/: moc_controller.cxx_parameters  moc_ctrnn3Layers.cxx_parameters  moc_elman.cxx_parameters  (+3 more)
(+23 files in other folders)
