cmake_minimum_required(VERSION 2.8)

SET ( EXECUTABLE pippo )

# UNCOMMENT FOR GRAPHICS
add_definitions(-D_GRAPHICS_)

FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( Qt COMPONENTS QtOpenGL REQUIRED )
FIND_PACKAGE( Qt4 REQUIRED )
SET( QT_USE_QTOPENGL TRUE )
SET(  QT_USE_QTXML TRUE )
INCLUDE( ${QT_USE_FILE} )

FILE ( GLOB SOURCES ./*.cpp ./MISC/*.cpp ./EVOL_ALGORITHM/*.cpp ./ROB_SENSORS_OBJS/*.cpp ./EXP/*.cpp ./CONTROLLERS/*.cpp ./EXP/RENDERING/*.cpp)  
FILE ( GLOB HEADERS ./*.h ./MISC/*.h ./EVOL_ALGORITHM/*.h ./ROB_SENSORS_OBJS/*.cpp ./EXP/*.h ./CONTROLLERS/*.h ./EXP/RENDERING/*.h)
FILE ( GLOB UIS ./*.ui ./EXP/RENDERING/*.ui)

QT4_WRAP_CPP( SOURCES ${HEADERS} )
QT4_WRAP_UI( SOURCES  ${UIS} )
FIND_PACKAGE ( GLUT )  
FIND_PACKAGE ( OpenGL )

INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} /usr/include/ /usr/local/include/ /usr/local/qwt-6.1.1-svn/include/ ${CMAKE_CURRENT_BINARY_DIR} ./EXP/RENDERING /usr/local/include/opencv2/ )
# UNCOMMENT FOR GRAPHICS

ADD_EXECUTABLE( ${EXECUTABLE} ${SOURCES})

# UNCOMMENT FOR GRAPHICS
TARGET_LINK_LIBRARIES( ${EXECUTABLE} ${OpenCV_LIBS} QGLViewer ${OPENGL_glu_LIBRARY}  ${GLUT_LIBRARIES} -lGL -lGLU  ${QT_LIBRARIES} )#revel xvidcore
TARGET_LINK_LIBRARIES( ${EXECUTABLE} "-L/sw/lib -lgsl -lgslcblas -lm -L/usr/local/qwt-6.1.1-svn/lib" )
# UNCOMMENT FOR GRAPHICS
